--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   height: 95%;
   margin-top: 0px;
   border: 1px none #000;
-  background-image: url("https://d3e54v103j8qbb.cloudfront.net/img/example-bg.png");
+  background-image: url("https://source.unsplash.com/collection/429729/1600x900");
   background-position: 0px 0px;
   background-size: auto;
   box-shadow: 0 0 0 -25px #000;
